--- a/css/about.css
+++ b/css/about.css
@@ -8,6 +8,11 @@
 }
 body{
     height: 100vh;
+       /* background-image: url("img/various-vegetables-black-table-with-space-message.jpg"); */
+    background: url("/img/various-vegetables-black-table-with-space-message.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
   
 }
 header{
